# Autonoma

./: .env.example  .gitignore  README.md  add_agent.md  app.py  credentials-example.json  package-lock.json  pyproject.toml  requirements.txt  server.py  test.py  user.py
agent-web/: .env.example  .eslintrc.cjs  capacitor.config.ts  docker-compose.yml  next.config.js  package.json  pnpm-lock.yaml
agent-web/src/: env.js
agent-web/src/app/: layout.tsx  page.tsx
agent-web/src/styles/: globals.css
agent-web/src/types/: speech-recognition.d.ts
src/agent/: graph.py  state.py
src/agent/agents/: browser.py  coder.py  computer.py  coordinator.py  file_manager.py  planner.py  reporter.py  researcher.py  supervisor.py
src/api/: app.py
src/config/: constants.py  llm.py  team.py
src/stt/: whisper.py
src/tools/: browser_tools.py  coder_tools.py  computer_tools.py  decorators.py  file_manager_tools.py  planner_tools.py  researcher_tools.py  single_agent.py
src/tools/browse_tools/: browser.py
src/tools/code_tools/: bash_tool.py  python_repl.py
src/tools/compute_tools/: computer.py
src/tools/file_management_tools/: copy_file.py  csv_search.py  delete_file.py  directory_read.py  directory_search.py  docx_search.py  file_search.py  json_search.py  list_directory.py  mdx_search.py  move_file.py  pdf_search.py  rag_search.py  read_file.py  txt_search.py  xml_search.py
src/tools/search_tools/: code_docs_search.py  crawl.py  travily.py  (+16 more)
src/utils/: json_utils.py  save_conversations.py  save_graph.py
src/workflows/: single_agent.py  stream_workflow.py  workflow.py
(+93 files in other folders)
